{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 11,
  "lineage": "05269ccf-c3bd-b17a-fb88-349f553435e2",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9832711e-0f83-472b-9b12-51273fe866c5/resourceGroups/AwnjResourceGroup/providers/Microsoft.Network/networkInterfaces/AwnjNIC",
            "internal_domain_name_suffix": "y5jkqxnx5lmutm3cdcxia0fg4g.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9832711e-0f83-472b-9b12-51273fe866c5/resourceGroups/AwnjResourceGroup/providers/Microsoft.Network/publicIPAddresses/AwnjPublicIP",
                "subnet_id": "/subscriptions/9832711e-0f83-472b-9b12-51273fe866c5/resourceGroups/AwnjResourceGroup/providers/Microsoft.Network/virtualNetworks/AwnjVnet/subnets/AwnjSubnet"
              }
            ],
            "location": "eastus",
            "name": "AwnjNIC",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "AwnjResourceGroup"
          },
          "dependencies": [
            "azurerm_public_ip.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9832711e-0f83-472b-9b12-51273fe866c5/resourceGroups/AwnjResourceGroup/providers/Microsoft.Network/networkSecurityGroups/AwnjNSG",
            "location": "eastus",
            "name": "AwnjNSG",
            "resource_group_name": "AwnjResourceGroup",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/9832711e-0f83-472b-9b12-51273fe866c5/resourceGroups/AwnjResourceGroup/providers/Microsoft.Network/networkSecurityGroups/AwnjNSG/securityRules/allowSSH",
            "name": "allowSSH",
            "network_security_group_name": "AwnjNSG",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "AwnjResourceGroup",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/9832711e-0f83-472b-9b12-51273fe866c5/resourceGroups/AwnjResourceGroup/providers/Microsoft.Network/publicIPAddresses/AwnjPublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.76.49.228",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "AwnjPublicIP",
            "resource_group_name": "AwnjResourceGroup",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9832711e-0f83-472b-9b12-51273fe866c5/resourceGroups/AwnjResourceGroup/providers/Microsoft.Network/virtualNetworks/AwnjVnet/subnets/AwnjSubnet",
            "name": "AwnjSubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "AwnjResourceGroup",
            "virtual_network_name": "AwnjVnet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9832711e-0f83-472b-9b12-51273fe866c5/resourceGroups/AwnjResourceGroup/providers/Microsoft.Network/virtualNetworks/AwnjVnet/subnets/AwnjSubnet",
            "network_security_group_id": "/subscriptions/9832711e-0f83-472b-9b12-51273fe866c5/resourceGroups/AwnjResourceGroup/providers/Microsoft.Network/networkSecurityGroups/AwnjNSG",
            "subnet_id": "/subscriptions/9832711e-0f83-472b-9b12-51273fe866c5/resourceGroups/AwnjResourceGroup/providers/Microsoft.Network/virtualNetworks/AwnjVnet/subnets/AwnjSubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "5da8d2c7-fab7-49d9-b3a2-18ae8068a6f6",
            "id": "/subscriptions/9832711e-0f83-472b-9b12-51273fe866c5/resourceGroups/AwnjResourceGroup/providers/Microsoft.Network/virtualNetworks/AwnjVnet",
            "location": "eastus",
            "name": "AwnjVnet",
            "resource_group_name": "AwnjResourceGroup"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}